@@ -2,8 +2,8 @@ package com.dingdongdeng.coinautotrading.trading.index;
 
 import com.dingdongdeng.coinautotrading.trading.exchange.common.model.ExchangeCandles;
 import com.dingdongdeng.coinautotrading.trading.exchange.common.model.ExchangeCandles.Candle;
-import com.dingdongdeng.coinautotrading.trading.index.Index.Macd;
 import com.tictactec.ta.lib.Core;
+import com.tictactec.ta.lib.MAType;
 import com.tictactec.ta.lib.MInteger;
 import java.util.Arrays;
 import java.util.Collections;
@@ -28,8 +28,111 @@ public class IndexCalculator {
     public Index getIndex(ExchangeCandles candles) {
         return Index.builder()
             .rsi(this.getRsi(candles))
-            .resistancePriceList(this.getResistancePrice(candles))
+            .resistance(this.getResistancePrice(candles))
             .macd(this.getMACD(candles))
+            .bollingerBands(this.getBollingerBands(candles))
+            .obv(this.getObv(candles))
+            .ma(this.getMv(candles))
+            .build();
+    }
+
+    public Ma getMv(ExchangeCandles candles) {
+        List<Candle> candleList = candles.getCandleList();
+        double[] inReal = candleList.stream().mapToDouble(Candle::getTradePrice).toArray();
+
+        // SMA 120
+        int SMA120_TIME_PERIOD = 120;
+        MInteger sma120OutBegIdx = new MInteger();
+        MInteger sma120OutNBElement = new MInteger();
+        double[] sma120OutReal = new double[inReal.length];
+        core.sma(0, inReal.length - 1, inReal, SMA120_TIME_PERIOD, sma120OutBegIdx, sma120OutNBElement, sma120OutReal);
+
+        // SMA 200
+        int SMA200_TIME_PERIOD = 200;
+        MInteger sma200OutBegIdx = new MInteger();
+        MInteger sma200OutNBElement = new MInteger();
+        double[] sma200OutReal = new double[inReal.length];
+        core.sma(0, inReal.length - 1, inReal, SMA200_TIME_PERIOD, sma200OutBegIdx, sma200OutNBElement, sma200OutReal);
+
+        // EMA 60
+        int EMA60_TIME_PERIOD = 60;
+        MInteger ema60OutBegIdx = new MInteger();
+        MInteger ema60OutNBElement = new MInteger();
+        double[] ema60OutReal = new double[inReal.length];
+        core.ema(0, inReal.length - 1, inReal, EMA60_TIME_PERIOD, ema60OutBegIdx, ema60OutNBElement, ema60OutReal);
+
+        return Ma.builder()
+            .sma120(sma120OutReal[sma120OutNBElement.value - 1])
+            .sma200(sma200OutReal[sma200OutNBElement.value - 1])
+            .ema60(ema60OutReal[ema60OutNBElement.value - 1])
+            .sma120s(Arrays.copyOfRange(sma120OutReal, 0, sma120OutNBElement.value))
+            .build();
+    }
+
+    public Obv getObv(ExchangeCandles candles) {
+        List<Candle> candleList = candles.getCandleList();
+
+        // obv 계산
+        double[] obvInReal = candleList.stream().mapToDouble(Candle::getTradePrice).toArray();
+        double[] obvInVolume = candleList.stream().mapToDouble(Candle::getCandleAccTradeVolume).toArray();
+        MInteger obvOutBegIdx = new MInteger();
+        MInteger obvOutNBElement = new MInteger();
+        double[] obvOutReal = new double[obvInReal.length];
+        core.obv(0, obvInReal.length - 1, obvInReal, obvInVolume, obvOutBegIdx, obvOutNBElement, obvOutReal);
+
+        // obv 시그널 계산
+        int TIME_PERIOD = 30;
+        double[] signalInReal = obvOutReal;
+        MInteger signalOutBegIdx = new MInteger();
+        MInteger signalOutNBElement = new MInteger();
+        double[] signalOutReal = new double[signalInReal.length];
+        core.sma(0, signalInReal.length - 1, signalInReal, TIME_PERIOD, signalOutBegIdx, signalOutNBElement, signalOutReal);
+
+        return Obv.builder()
+            .obv(obvOutReal[obvOutNBElement.value - 1])
+            .hist(obvOutReal[obvOutNBElement.value - 1] - signalOutReal[signalOutNBElement.value - 1])
+            .build();
+    }
+
+    public BollingerBands getBollingerBands(ExchangeCandles candles) {
+        List<Candle> candleList = candles.getCandleList();
+
+        // 볼린저 밴드 계산
+        MAType MA_TYPE = MAType.Sma;
+        int TIME_PERIOD = 20;
+        int NB_DEV_UP = 2;
+        int NB_DEV_DOWN = 2;
+        double[] bbandsInReal = candleList.stream().mapToDouble(Candle::getTradePrice).toArray();
+        double[] bbandsOutRealUpperBand = new double[bbandsInReal.length];
+        double[] bbandsOutRealMiddleBand = new double[bbandsInReal.length];
+        double[] bbandsOutRealLowerBand = new double[bbandsInReal.length];
+        MInteger bbandsOutBegIdx = new MInteger();
+        MInteger bbandsOutNBElement = new MInteger();
+
+        core.bbands(0, bbandsInReal.length - 1, bbandsInReal, TIME_PERIOD, NB_DEV_UP, NB_DEV_DOWN, MA_TYPE, bbandsOutBegIdx, bbandsOutNBElement, bbandsOutRealUpperBand,
+            bbandsOutRealMiddleBand, bbandsOutRealLowerBand);
+
+        // 볼린저 밴드 높이 계산
+        double[] bbandsOutRealHeight = new double[bbandsOutNBElement.value];
+        for (int i = 0; i < bbandsOutRealHeight.length; i++) {
+            bbandsOutRealHeight[i] = bbandsOutRealUpperBand[i] - bbandsOutRealLowerBand[i];
+        }
+
+        // 볼린저 밴드 높이 시그널 계산
+        int SIGNAL_TIME_PERIOD = 10;
+        double[] signalInReal = bbandsOutRealHeight;
+        MInteger signalOutBegIdx = new MInteger();
+        MInteger signalOutNBElement = new MInteger();
+        double[] signalOutReal = new double[signalInReal.length];
+        core.sma(0, signalInReal.length - 1, signalInReal, SIGNAL_TIME_PERIOD, signalOutBegIdx, signalOutNBElement, signalOutReal);
+
+        return BollingerBands.builder()
+            .upper(bbandsOutRealUpperBand[bbandsOutNBElement.value - 1])
+            .middle(bbandsOutRealMiddleBand[bbandsOutNBElement.value - 1])
+            .lower(bbandsOutRealLowerBand[bbandsOutNBElement.value - 1])
+            .height(bbandsOutRealHeight[bbandsOutNBElement.value - 1])
+            .heightHist(bbandsOutRealHeight[bbandsOutNBElement.value - 1] - signalOutReal[signalOutNBElement.value - 1])
+            .lowers(Arrays.copyOfRange(bbandsOutRealLowerBand, 0, bbandsOutNBElement.value))
             .build();
     }
 
@@ -53,45 +156,23 @@ public class IndexCalculator {
             .hist(outMACDHist[outNBElement.value - 1])
             .signal(outMACDSignal[outNBElement.value - 1])
             .macd(outMACD[outNBElement.value - 1])
-            .currentUptrendHighestHist(this.getCurrentUptrendHighest(outMACDHist))
-            .currentDowntrendLowestHist(this.getCurrentDowntrendHighest(outMACDHist))
             .hists(Arrays.copyOfRange(outMACDHist, 0, outNBElement.value))
+            .macds(Arrays.copyOfRange(outMACD, 0, outNBElement.value))
+            .signals(Arrays.copyOfRange(outMACDSignal, 0, outNBElement.value))
             .build();
     }
 
-    private double getCurrentUptrendHighest(double[] outMACDHist) {
-        double highestMacd = 0;
-        for (int i = outMACDHist.length - 1; i >= 0; i--) {
-            if (outMACDHist[i] < 0) {
-                break;
-            }
-            if (outMACDHist[i] >= highestMacd) {
-                highestMacd = outMACDHist[i];
-            }
-        }
-        return highestMacd;
-    }
-
-    private double getCurrentDowntrendHighest(double[] outMACDHist) {
-        double lowestMacd = 0;
-        for (int i = outMACDHist.length - 1; i >= 0; i--) {
-            if (outMACDHist[i] > 0) {
-                break;
-            }
-            if (outMACDHist[i] <= lowestMacd) {
-                lowestMacd = outMACDHist[i];
-            }
-        }
-        return lowestMacd;
-    }
-
-    public List<Double> getResistancePrice(ExchangeCandles candles) {
+    public Resistance getResistancePrice(ExchangeCandles candles) {
         int RESISTANCE_MAX_COUNT = 20;
+
+        // 너무 오래된 저항선은 의미없기때문에 절반의 캔들만 다룸
+        int size = candles.getCandleList().size();
+        List<Candle> candleList = candles.getCandleList().subList(size / 2, size - 10); //최 캔들은 지지선 계산에서 제외
 
         // 가격대별 거래량을 통해 지지/저항선을 추출
         Map<Double, Double> priceMap = new HashMap<>();
-        for (Candle candle : candles.getCandleList()) {
-            Double price = candle.getTradePrice();
+        for (Candle candle : candleList) {
+            Double price = Math.floor(candle.getTradePrice() / 10000) * 10000;
             Double volume = Objects.isNull(candle.getCandleAccTradeVolume()) ? 0 : candle.getCandleAccTradeVolume();
             if (Objects.isNull(priceMap.get(price))) {
                 priceMap.put(price, volume);
@@ -105,23 +186,11 @@ public class IndexCalculator {
             .sorted(Collections.reverseOrder(Entry.comparingByValue()))
             .limit(RESISTANCE_MAX_COUNT)
             .sorted(Entry.comparingByKey())
-            .toList();
+            .collect(Collectors.toList());
 
-        // 지지/저항선간의 간격이 큰 것들을 추출
-        Map<Double, Double> diffMap = new HashMap<>();
-        for (int i = 0; i < priceEntryList.size() - 1; i++) {
-            double currentPrice = priceEntryList.get(i).getKey();
-            double nextPrice = priceEntryList.get(i + 1).getKey();
-            double diffPrice = nextPrice - currentPrice;
-            diffMap.put(currentPrice, diffPrice);
-        }
-        List<Entry<Double, Double>> diffEntryList = diffMap.entrySet().stream()
-            .sorted(Collections.reverseOrder(Entry.comparingByValue()))
-            .limit(RESISTANCE_MAX_COUNT / 2)
-            .sorted(Entry.comparingByKey())
-            .toList();
-
-        return diffEntryList.stream().map(Entry::getKey).collect(Collectors.toList());
+        return Resistance.builder()
+            .resistancePriceList(priceEntryList.stream().map(Entry::getKey).toList())
+            .build();
     }
 
     // RSI(지수 가중 이동 평균)
